--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>FITIN Beauty Store - Luxury Cosmetics & Skincare</title>
+    <title>FITIN Fashion Mens Wears</title>
     <meta name="description" content="Discover the new beauty collection. Premium cosmetics, skincare, and hair care products for the bold and beautiful." />
     <meta name="author" content="FITIN Beauty Store" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
