--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <link rel="icon" href="src/assets/fitin.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>FITIN Fashion Mens Wears</title>
     <meta name="description" content="Discover the new beauty collection. Premium cosmetics, skincare, and hair care products for the bold and beautiful." />
